locally able to run, setting up for vercel and heroku

--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,14 @@
 	"version": 2,
 	"builds": [
 	  {
-		"src": "app.py",
-		"use": "@vercel/python"
+	    "src": "public/index.html",
+	    "use": "@vercel/static"
 	  }
 	],
 	"routes": [
 	  {
-		"src": "/(.*)",
-		"dest": "app.py"
+	    "src": "/(.*)",
+	    "dest": "/public/index.html"
 	  }
 	]
-}
+      }
