--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,8 @@
 #
 #    pip-compile requirements.in
 #
+blinker==1.9.0
+    # via flask
 certifi==2024.12.14
     # via requests
 charset-normalizer==3.4.1
@@ -18,6 +20,8 @@ flask==3.1.0
     # via -r requirements.in
 fonttools==4.55.3
     # via matplotlib
+gunicorn==20.0.4
+    # via -r requirements.in
 idna==3.10
     # via requests
 itsdangerous==2.2.0
@@ -33,7 +37,9 @@ markupsafe==3.0.2
     #   jinja2
     #   werkzeug
 matplotlib==3.10.0
-    # via seaborn
+    # via
+    #   -r requirements.in
+    #   seaborn
 numpy==2.2.1
     # via
     #   -r requirements.in
@@ -46,7 +52,9 @@ numpy==2.2.1
 packaging==24.2
     # via matplotlib
 pandas==2.2.3
-    # via seaborn
+    # via
+    #   -r requirements.in
+    #   seaborn
 pillow==11.1.0
     # via matplotlib
 pyparsing==3.2.1
@@ -75,3 +83,6 @@ urllib3==2.3.0
     # via requests
 werkzeug==3.1.3
     # via flask
+
+# The following packages are considered to be unsafe in a requirements file:
+# setuptools
