--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,10 @@ contourpy==1.3.1
 cycler==0.12.1
     # via matplotlib
 flask==3.1.0
+    # via
+    #   -r requirements.in
+    #   flask-cors
+flask-cors==5.0.0
     # via -r requirements.in
 fonttools==4.55.3
     # via matplotlib
