--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,65 @@
+attrs==25.3.0
 beautifulsoup4==4.13.4
 blinker==1.9.0
 boto3==1.38.27
 botocore==1.38.27
 cachetools==5.5.2
+cattrs==25.1.1
 certifi==2024.12.14
 charset-normalizer==3.4.1
 chess==1.11.1
 click==8.1.8
 contourpy==1.3.1
 cycler==0.12.1
+db-dtypes==1.4.3
+et_xmlfile==2.0.0
 Flask==3.1.0
 Flask-Cors==5.0.0
 fonttools==4.55.3
+gcloud==0.18.3
 google==3.0.0
 google-api-core==2.25.0
 google-auth==2.40.3
-google-cloud-bigquery==3.11.4
+google-auth-httplib2==0.2.0
+google-auth-oauthlib==1.2.2
+google-cloud-bigquery==3.34.0
 google-cloud-core==2.4.3
 google-crc32c==1.7.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
 grpcio==1.72.1
 grpcio-status==1.72.1
-gunicorn==21.2.0
+gunicorn==20.0.4
+httplib2==0.22.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 jmespath==1.0.1
 joblib==1.4.2
 kiwisolver==1.4.8
+looker-sdk==23.20.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
-numpy==1.24.3
+numpy==2.2.1
+oauth2client==4.1.3
+oauthlib==3.3.0
+openpyxl==3.1.5
 packaging==24.2
-pandas==2.0.3
+pandas==2.2.3
 pillow==11.1.0
 proto-plus==1.26.1
+protobuf==6.31.1
 pyarrow==20.0.0
 pyasn1==0.6.1
 pyasn1_modules==0.4.2
 pyparsing==3.2.1
 python-chess==1.999
 python-dateutil==2.9.0.post0
-python-dotenv==1.0.0
+python-dotenv==1.1.0
 pytz==2024.2
 redis==6.2.0
 requests==2.32.3
+requests-oauthlib==2.0.0
 rsa==4.9.1
 s3transfer==0.13.0
 scikit-learn==1.6.0
